--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -20,10 +20,10 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         # Add any other dependencies here, for example:
-        pip install --upgrade requests
-        pip install --upgrade bs4 
+          python3 -m pip install --upgrade requests
+          python3 -m pip install --upgrade bs4 
 
     - name: Run get_yc_data.py script
       run: |
