--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -3,7 +3,7 @@ name: Daily get_yc_data Script Execution
 on:
   schedule:
     # Runs every day
-    - cron: '0 0 * * *'
+    - cron: '0/7 * * * *'
 
 jobs:
   run-scrapy-script:
@@ -22,6 +22,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         # Add any other dependencies here, for example:
+          pip install --upgrade os
+          pip install --upgrade json
+          pip install --upgrade datetime
           pip install --upgrade requests
           pip install --upgrade bs4 
 
