updated workflow file

--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -3,7 +3,7 @@ name: Daily get_yc_data Script Execution
 on:
   schedule:
     # Runs every day
-    - cron: '0/7 * * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   run-scrapy-script:
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8' # Specify the Python version you need
 
