--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         # Add any other dependencies here, for example:
           pip install --upgrade os
           pip install --upgrade json
