--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -3,7 +3,7 @@ name: Daily get_yc_data Script Execution
 on:
   schedule:
     # Runs every day
-    - cron: '0 0 * * *'
+    - cron: '*/5 * * * *'
 
 jobs:
   run-scrapy-script:
