--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.8' # Specify the Python version you need
+        python-version: '3.8' 
 
     - name: Install dependencies
       run: |
