--- a/.github/workflows/daily_script.yml
+++ b/.github/workflows/daily_script.yml
@@ -22,11 +22,11 @@ jobs:
       run: |
         python3 -m pip install --upgrade pip
         # Add other dependencies 
-          pip install --upgrade os
-          pip install --upgrade json
-          pip install --upgrade datetime
-          pip install --upgrade requests
-          pip install --upgrade bs4 
+        python3 -m pip install --upgrade os
+        python3 -m pip install --upgrade json
+        python3 -m pip install --upgrade datetime
+        python3 -m pip install --upgrade requests
+        python3 -m pip install --upgrade bs4 
 
     - name: Run get_yc_data.py script
       run: |
